fix: code complete command